Update 'ej06ija1t-go' component image to: quay.io/rhtaptestqa/rhtap-qe:1a9bdd29e7e93b0114848415d9373fe9790da776@sha256:ca2833568ce4453d71d105e1c98dbfb6fbcc7e1e4844fa1efb9a26e029474127

--- a/components/ej06ija1t-go/overlays/development/deployment-patch.yaml
+++ b/components/ej06ija1t-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ej06ija1t-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtaptestqa/rhtap-qe:1a9bdd29e7e93b0114848415d9373fe9790da776@sha256:ca2833568ce4453d71d105e1c98dbfb6fbcc7e1e4844fa1efb9a26e029474127
+          name: container-image
